--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,77 @@ ENV/
 env.bak/
 venv.bak/
 /__pycache__/
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/.out/
+frontend/.cache/
+frontend/.env
+__pycache__/
+__pycache__/*
+# C extensions
+*.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Django stuff:
+*.log
+*.pot
+__pycache__
+# Sphinx documentation
+docs/_build/
+migrations/*/__pycache__
+accounts/*/__pycache__
+projeto/__pycache__
+projeto/settings/__pycache__
+projeto/urls/__pycache__
+projeto/wsgi/__pycache__
+accounts/migrations/__pycache__
+accounts/__pycache__/
+accounts/__pycache__/*
+accounts/__pycache__/__init__.cpython-311.pyc
+accounts/__pycache__/admin.cpython-311.pyc
+accounts/__pycache__/apps.cpython-311.pyc
+accounts/__pycache__/models.cpython-311.pyc
+accounts/__pycache__/urls.cpython-311.pyc
+accounts/__pycache__/views.cpython-311.pyc
+accounts/migrations/__pycache__/__init__.cpython-311.pyc
+projeto/__pycache__/__init__.cpython-311.pyc
+projeto/__pycache__/settings.cpython-311.pyc
+projeto/__pycache__/urls.cpython-311.pyc
+projeto/__pycache__/wsgi.cpython-311.pyc
